# ufw-log-monitor

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  convert_ufw_to_json.py  docker-compose.yml  pretty_print_json.sh  pyproject.toml
.github/workflows/: docker-image.yml
